[metadata]
name = oura
version = 1.3.0
author = turing-complet
author_email = turingcomplet@proton.me
description = Oura API client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turing-complet/python-ouraring
project_urls =
    Bug Tracker = https://github.com/turing-complet/python-ouraring/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests-oauthlib
    pandas

[options.packages.find]
exclude = tests
